<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.DenisPavelRafael.CustomerLoyaltyProgram.PointsAndHistoryActivity"
    android:background="@color/colorPrimaryDark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewWelcomeMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/textViewWelcomeMsg"
            android:textAlignment="center"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/textViewPoints"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150sp"
            android:text="@string/textViewPoints"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp" />

        <Button
            android:id="@+id/buttonGetCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70sp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="70sp"
            android:background="@drawable/button"
            android:onClick="onClickGetCode"
            android:text="@string/buttonGetCode"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textViewHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewHistory"
            android:textSize="26sp"
            android:textAlignment="center"
            android:layout_marginTop="15sp"
            android:textColor="@color/colorPrimary"/>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>