<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="ru.DenisPavelRafael.CustomerLoyaltyProgram.AuthorizationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageViewAuthorization"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="40sp"
            android:paddingTop="40sp"
            app:srcCompat="@android:drawable/ic_lock_lock" />

        <TextView
            android:id="@+id/textViewAuthorization"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewAuthorization"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/editTextLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/editTextLogin"
            android:layout_marginLeft="40sp"
            android:layout_marginRight="40sp"
            android:layout_marginTop="20sp"
            android:background="@drawable/fileds"
            android:padding="15sp"
            android:textColorHint="@color/colorAccent"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/editTextPassword"
            android:layout_marginLeft="40sp"
            android:layout_marginRight="40sp"
            android:layout_marginTop="20sp"
            android:background="@drawable/fileds"
            android:padding="15sp"
            android:textColorHint="@color/colorAccent"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/buttonEnter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100sp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="100sp"
            android:background="@drawable/button"
            android:text="@string/buttonEnter"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textViewQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/textViewQuestion"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textColor="@color/colorPrimary"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>