<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.DenisPavelRafael.CustomerLoyaltyProgram.UniqueCodeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewCode"
            android:layout_width="match_parent"
            android:layout_height="80sp"
            android:layout_marginTop="150sp"
            android:layout_marginRight="100sp"
            android:layout_marginLeft="100sp"
            android:text="@string/textViewCode"
            android:textSize="48sp"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textViewYourCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="26sp"
            android:textColor="@color/colorPrimary"
            android:text="@string/textViewYourCode" />

        <Button
            android:id="@+id/buttonOffers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60sp"
            android:layout_marginTop="35sp"
            android:layout_marginRight="60sp"
            android:background="@drawable/button"
            android:onClick="onClickOffers"
            android:text="@string/Offers" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>